Fix: alignment in otp page

--- a/app/globals.css
+++ b/app/globals.css
@@ -118,47 +118,6 @@ hanko-profile {
   --background-color: white;
   --error-color: #e82020;
   --link-color: hsl(240 3.8% 46.1%);
-
-  /* Font Styles */
-  --font-weight: 400;
-  --font-size: 16px;
-  --font-family: sans-serif;
-
-  /* Border Styles */
-  --border-radius: 8px;
-  --border-style: solid;
-  --border-width: 1px;
-
-  /* Item Styles */
-  --item-height: 34px;
-  --item-margin: 0.5rem 0;
-
-  /* Container Styles */
-  --container-padding: 30px;
-  --container-max-width: none;
-
-  /* Headline Styles */
-  --headline1-font-size: 24px;
-  --headline1-font-weight: 600;
-  --headline1-margin: 0 0 1rem;
-
-  --headline2-font-size: 16px;
-  --headline2-font-weight: 600;
-  --headline2-margin: 1rem 0 0.5rem;
-
-  /* Divider Styles */
-  --divider-padding: 0 42px;
-  --divider-visibility: visible;
-
-  /* Link Styles */
-  --link-text-decoration: none;
-  --link-text-decoration-hover: underline;
-
-  /* Input Styles */
-  --input-min-width: 14em;
-
-  /* Button Styles */
-  --button-min-width: max-content;
 }
 
 hanko-auth.dark,
@@ -175,47 +134,6 @@ hanko-profile.dark {
   --background-color: hsl(240 10% 3.9%);
   --error-color: #e82020;
   --link-color: hsl(0 0% 98%);
-
-  /* Font Styles */
-  --font-weight: 400;
-  --font-size: 16px;
-  --font-family: sans-serif;
-
-  /* Border Styles */
-  --border-radius: 8px;
-  --border-style: solid;
-  --border-width: 1px;
-
-  /* Item Styles */
-  --item-height: 34px;
-  --item-margin: 0.5rem 0;
-
-  /* Container Styles */
-  --container-padding: 30px;
-  --container-max-width: none;
-
-  /* Headline Styles */
-  --headline1-font-size: 1.5rem;
-  --headline1-font-weight: 600;
-  --headline1-margin: 0 0 1rem;
-
-  --headline2-font-size: 16px;
-  --headline2-font-weight: 600;
-  --headline2-margin: 1rem 0 0.5rem;
-
-  /* Divider Styles */
-  --divider-padding: 0 42px;
-  --divider-visibility: visible;
-
-  /* Link Styles */
-  --link-text-decoration: none;
-  --link-text-decoration-hover: underline;
-
-  /* Input Styles */
-  --input-min-width: 14em;
-
-  /* Button Styles */
-  --button-min-width: max-content;
 }
 
 hanko-auth::part(headline1),
@@ -223,7 +141,6 @@ hanko-profile::part(headline1) {
   text-align: center;
 }
 
-hanko-auth::part(container),
 hanko-profile::part(container) {
-  width: 100%;
+  max-width: none;
 }
